止盈模块用户功能完成
