# public/swagger.json
@@ -183,6 +183,41 @@
         }
       }
     },
+    "/user/delOptStockDealDetail.json": {
+      "delete": {
+        "tags": [
+          "user"
+        ],
+        "summary": "删除用户设置的个股止盈止损信息",
+        "description": "限定登陆用户",
+        "operationId": "delOptStockDealDetail",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "code为股票代码",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/optStockDealDelParam"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/ApiStockDealDetailResponse"
+            }
+          },
+          "401": {
+            "description": "用户未登陆"
+          }
+        }
+      }
+    },
     "/user/queryOptStockDealDetail.json": {
       "get": {
         "tags": [
@@ -349,6 +384,30 @@
           }
         }
       }
+    },
+    "/user/logout.json": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "summary": "退出登陆",
+        "description": "限定登陆用户",
+        "operationId": "logout",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Response"
+            }
+          },
+          "401": {
+            "description": "用户未登陆"
+          }
+        }
+      }
     }
   },
   "securityDefinitions": {
@@ -384,9 +443,18 @@
     "optStockParam": {
       "type": "object",
       "properties": {
-        "stock": {
+        "codes": {
           "type": "string",
           "example": "600030,002014,000800,300104"
+        }
+      }
+    },
+    "optStockDealDelParam": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string",
+          "example": "600030"
         }
       }
     },
@@ -412,6 +480,22 @@
         "user": {
           "type": "string",
           "example": "用户id"
+        }
+      }
+    },
+    "Response": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32",
+          "example": 1
+        },
+        "msg": {
+          "type": "string"
+        },
+        "data": {
+          "type": "string"
         }
       }
     },
@@ -564,34 +648,25 @@
     "UserInfo": {
       "type": "object",
       "properties": {
-        "_id": {
+        "time": {
+          "type": "string",
+          "example": "用户信息保存时间2019-06-28 11:09:58"
+        },
+        "nickName": {
+          "type": "string",
+          "example": "用户昵称"
+        },
+        "location": {
+          "type": "string",
+          "example": "用户所在地"
+        },
+        "profile_image_url": {
+          "type": "string",
+          "example": "用户头像"
+        },
+        "uid": {
           "type": "string",
           "example": "用户id"
-        },
-        "user": {
-          "type": "object",
-          "properties": {
-            "time": {
-              "type": "string",
-              "example": "用户信息保存时间2019-06-28 11:09:58"
-            },
-            "nickName": {
-              "type": "string",
-              "example": "用户昵称"
-            },
-            "location": {
-              "type": "string",
-              "example": "用户所在地"
-            },
-            "profile_image_url": {
-              "type": "string",
-              "example": "用户头像"
-            },
-            "uid": {
-              "type": "string",
-              "example": "用户id"
-            }
-          }
         }
       }
     },
@@ -607,10 +682,8 @@
           "type": "string"
         },
         "data": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/UserInfo"
-          }
+          "type": "object",
+          "$ref": "#/definitions/UserInfo"
         }
       }
     }
